<resources>
    <string name="app_name">CodingAssignment</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="let_s_help_you_find_your_dream_job">Let us help you find your dream job</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_7_digit_nsu_id">Enter your 7 digit NSU id</string>
    <string name="next">Next</string>
    <string name="log_in">Log In</string>
    <string name="already_havean_account">Already havean account? Log In</string>
    <string name="enter_your_nsu_e_mail">Enter your NSU e-mail</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="toast_message">So far works</string>
    <string name="select_date">Select your date of birth</string>
    <string name="lets_get_you_know_a_little_better">Lets Get you Know a Little Better</string>
    <string name="name_of_your_school">Name of your school</string>
    <string name="textview">TextView</string>
    <string name="name_of_your_department">Name of your department</string>
    <string name="select_date_of_birth">Your date of birth</string>
    <string name="your_nid_number">Your nid number</string>
    <string name="gender">Gender</string>
    <string name="your_present_address">Your present address</string>
    <string name="per_country">Country</string>
    <string name="per_district">District</string>
    <string name="per_post_office">Post Office</string>
    <string name="per_police_station">Police Station</string>
    <string name="per_postalCode">Postal Code</string>
    <string name="per_house">House/Village/City</string>
    <string name="per_road">Road/Block/Sector</string>
    <string name="your_permanent_address">Your permanent address</string>
    <string name="save">Save</string>
    <string name="search_here">Search Here</string>
    <string name="search_students">Search Students</string>
    <string name="nsu_id_error_message">You should put the first 7 digit of your NSU id</string>
    <string name="phone_number_error_message">Your phone number should be 11 digit</string>
    <string name="cofirm_password_error_message">Passwords don\'t match</string>
    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="nid_number_error_message">Your NID Number should be 10 digit</string>
    <string name="view_all_students">All Students</string>
    <string name="welcome">Welcome</string>
    <string name="tagline_login">Let’s help you find your dream job</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_account">You do not have any account. Please sign up first</string>
    <string name="error_previous_account">You already have an account</string>
    <string name="error_registration_not_successful">Registration is not successful</string>
    <string name="password_length_not_enough">Password should be atleast 6 characters</string>
</resources>